--- a/index.html
+++ b/index.html
@@ -21,16 +21,57 @@
   <button class="nav-btn left">&lt;</button>
   
   <div class="carousel-wrapper">
-    <ul class="carousel">
-      <li class="carousel-item"><img src="images/bild1.jpg" alt="Bild 1"></li>
-      <li class="carousel-item"><img src="images/bild2.jpg" alt="Bild 2"></li>
-      <li class="carousel-item"><img src="images/bild3.jpg" alt="Bild 3"></li>
-      <li class="carousel-item"><img src="images/bild4.jpg" alt="Bild 4"></li>
-      <li class="carousel-item"><img src="images/bild5.jpg" alt="Bild 5"></li>
-      <li class="carousel-item"><img src="images/bild6.jpg" alt="Bild 6"></li>
-      <li class="carousel-item"><img src="images/bild7.jpg" alt="Bild 7"></li>
-    </ul>
-  </div>
+  <ul class="carousel">
+    <li class="carousel-item">
+      <div class="hover-img">
+        <img src="images/bild1.jpg" alt="Bild 1">
+        <img src="images/bild1a.jpg" alt="Bild 1a">
+      </div>
+    </li>
+
+    <li class="carousel-item">
+      <div class="hover-img">
+        <img src="images/bild2.jpg" alt="Bild 2">
+        <img src="images/bild2a.jpg" alt="Bild 2a">
+      </div>
+    </li>
+
+    <li class="carousel-item">
+      <div class="hover-img">
+        <img src="images/bild3.jpg" alt="Bild 3">
+        <img src="images/bild3a.jpg" alt="Bild 3a">
+      </div>
+    </li>
+
+    <li class="carousel-item">
+      <div class="hover-img">
+        <img src="images/bild4.jpg" alt="Bild 4">
+        <img src="images/bild4a.jpg" alt="Bild 4a">
+      </div>
+    </li>
+
+    <li class="carousel-item">
+      <div class="hover-img">
+        <img src="images/bild5.jpg" alt="Bild 5">
+        <img src="images/bild5a.jpg" alt="Bild 5a">
+      </div>
+    </li>
+
+    <li class="carousel-item">
+      <div class="hover-img">
+        <img src="images/bild6.jpg" alt="Bild 6">
+        <img src="images/bild6a.jpg" alt="Bild 6a">
+      </div>
+    </li>
+
+    <li class="carousel-item">
+      <div class="hover-img">
+        <img src="images/bild7.jpg" alt="Bild 7">
+        <img src="images/bild7a.jpg" alt="Bild 7a">
+      </div>
+    </li>
+  </ul>
+</div>
   
   <button class="nav-btn right">&gt;</button>
 </nav>
@@ -48,16 +89,21 @@ Es gibt sogenannte UV Strahlungen (Ultraviolette Strahlungen), die von der Sonne
 Wenn du dich jetzt nicht regelmäßig eincremst kann beim berühren von den UV Strahlungen auf die Haut Erbgutschäden in den Hautzellen entstehen. 
 
 Um das Wort Erbgutschäden zu verstehen und damit die Auswirkung, ist der Aufbau einer menschlichen Zelle relevant. (links eine abbildung) Auf der Abbildung ist ein Zellkern zusehen, welcher unteranderem Nucleous beinhaltet. Diese sind kreisförmig aufgebaut, zudem befinden sich ungefähr 1-3 von den Nucleous in einem Zellkern. Dort lebt die sogenannte DNA. Diese wird weitergegeben in der Zelle weitergeben und ist für die erhaltung der Menschen verantwortlich. Falls dir jetzt trotzdem nicht weißt, was genau die DNA ist, hier ein Beispiel: bestimmt hast du schonmal gehört, dass du einem Familienmitglied ähnlich siehst. Auch wenn du es vielleicht nicht selbst sehen kannst, stimmt diese Aussage in vielen Fällen sogar, da deine DNA über Generationen zu dir gekommen ist. Deine Haarfarbe,Augenfarbe oder Hautfarbe haben alles was mit deiner Genetik und der Weitergabe von deinen Erzeugern zutun. Die sogennate DNA ist dir also vererbt worden.
-Zunächst kann der Körper diese Erbgutschäden reparieren, doch bei stärkere Strahlung kann der Körper nicht helfen und die Schäden bleiben in den Hautzellen. Bei dir kann können sich die Schäden sogar schneller verteilen als bei deinen Eltern, das entsteht aufgrund deiner erhöhten Zellteilung, die bei dir mehr stattfindet als bei ihnen. Wenn du dich regelmäßig vor den UV Strahlungen schützt, ist die Chance geringer später an Hautkrebs zu erkranken.
-      <br> https://www.bfs.de/DE/themen/opt/uv/schutz/einfuehrung/einfuehrung_node.html
-
-
-
-
+Zunächst kann der Körper diese Erbgutschäden reparieren, doch bei stärkere Strahlung kann der Körper nicht helfen und die Schäden bleiben in den Hautzellen. Bei dir kann können sich die Schäden sogar schneller verteilen als bei deinen Eltern, das entsteht aufgrund deiner erhöhten Zellteilung, die bei dir mehr stattfindet als bei ihnen. Wenn du dich regelmäßig vor den UV Strahlungen schützt, ist die Chance geringer später an Hautkrebs zu erkranken. (siehe Quelle 1)
+    
+</p>
+<br>
+<p>
 Du brauchst dir aber keine Sorgen machen, dass Du sofort Hautkrebs bekommst, sobald die Sonne deine Haut berührt. „Wer also heute stundenlang in der Sonne sitzt, bekommt nicht sofort Hautkrebs. Unsere Haut hält schon einiges aus, aber sie merkt sich auch alles. Insbesondere häufige Sonnenbrände im Kindes- und Jugendalter rächen sich dann 20 oder 30 Jahre später.", berichtet
-der Prof. Jan-Christoph Simon, Direktor der Klinik und Poliklinik für Dermatologie, Venerologie und Allergologie am Universitätsklinikum Leipzig .
+der Prof. Jan-Christoph Simon, Direktor der Klinik und Poliklinik für Dermatologie, Venerologie und Allergologie am Universitätsklinikum Leipzig. (siehe Quelle 2)
+
+<br>
+
+ <a href="https://www.bfs.de/DE/themen/opt/uv/schutz/einfuehrung/einfuehrung_node.html" target="_blank" rel="noopener noreferrer">Quelle 1</a>
+ <br>
+ <a href="https://www.uniklinikum-leipzig.de/Seiten/klimawandel-hautkrebs.aspx#:~:text=„Mit%20dem%20Klimawandel%20wird%20es,%22%2C%20warnt%20%E2%80%8B%E2%80%8BProf" target="_blank" rel="noopener noreferrer">Quelle 2</a>
  
-https://www.uniklinikum-leipzig.de/Seiten/klimawandel-hautkrebs.aspx#:~:text=„Mit%20dem%20Klimawandel%20wird%20es,%22%2C%20warnt%20%E2%80%8B%E2%80%8BProf.(13.10)
+
 
       </p>
     </section>
