--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <ul class="carousel">
     <li class="carousel-item">
       <div class="hover-img">
-        <img src="images/bild1.jpg" alt="Bild 1">
-        <img src="images/bild1a.jpg" alt="Bild 1a">
+        <img src="images/Bild1.jpg" alt="Bild 1">
+        <img src="images/Bild1a.jpg" alt="Bild 1a">
       </div>
     </li>
 
@@ -134,3 +134,4 @@ der Prof. Jan-Christoph Simon, Direktor der Klinik und Poliklinik für Dermatolo
   <script src="js/main.js"></script>
 </body>
 </html>
+
