--- a/index.html
+++ b/index.html
@@ -31,43 +31,43 @@
 
     <li class="carousel-item">
       <div class="hover-img">
-        <img src="images/bild2.jpg" alt="Bild 2">
-        <img src="images/bild2a.jpg" alt="Bild 2a">
+        <img src="images/Bild2.jpg" alt="Bild 2">
+        <img src="images/Bild2a.jpg" alt="Bild 2a">
       </div>
     </li>
 
     <li class="carousel-item">
       <div class="hover-img">
-        <img src="images/bild3.jpg" alt="Bild 3">
-        <img src="images/bild3a.jpg" alt="Bild 3a">
+        <img src="images/Bild3.jpg" alt="Bild 3">
+        <img src="images/Bild3a.jpg" alt="Bild 3a">
       </div>
     </li>
 
     <li class="carousel-item">
       <div class="hover-img">
-        <img src="images/bild4.jpg" alt="Bild 4">
-        <img src="images/bild4a.jpg" alt="Bild 4a">
+        <img src="images/Bild4.jpg" alt="Bild 4">
+        <img src="images/Bild4a.jpg" alt="Bild 4a">
       </div>
     </li>
 
     <li class="carousel-item">
       <div class="hover-img">
-        <img src="images/bild5.jpg" alt="Bild 5">
-        <img src="images/bild5a.jpg" alt="Bild 5a">
+        <img src="images/Bild5.jpg" alt="Bild 5">
+        <img src="images/Bild5a.jpg" alt="Bild 5a">
       </div>
     </li>
 
     <li class="carousel-item">
       <div class="hover-img">
-        <img src="images/bild6.jpg" alt="Bild 6">
-        <img src="images/bild6a.jpg" alt="Bild 6a">
+        <img src="images/Bild6.jpg" alt="Bild 6">
+        <img src="images/Bild6a.jpg" alt="Bild 6a">
       </div>
     </li>
 
     <li class="carousel-item">
       <div class="hover-img">
-        <img src="images/bild7.jpg" alt="Bild 7">
-        <img src="images/bild7a.jpg" alt="Bild 7a">
+        <img src="images/Bild7.jpg" alt="Bild 7">
+        <img src="images/Bild7a.jpg" alt="Bild 7a">
       </div>
     </li>
   </ul>
@@ -134,4 +134,5 @@ der Prof. Jan-Christoph Simon, Direktor der Klinik und Poliklinik für Dermatolo
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
