--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
   <!-- Header / Kopfbereich -->
   <header class="site-header">
-    <h1>Projektname</h1>
-    <p class="subtitle">Platzhalter für Untertitel oder Slogan</p>
+    <h1>Klimawandel und seine Folgen</h1>
+    <p class="subtitle">Hautkrebs</p>
   </header>
 
   <!-- Navigation -->
@@ -134,5 +134,3 @@ der Prof. Jan-Christoph Simon, Direktor der Klinik und Poliklinik für Dermatolo
   <script src="js/main.js"></script>
 </body>
 </html>
-
-
