--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Schulprojekt – Grundgerüst</title>
+  <title>Looc tsi Anna</title>
 
   <!-- Zentrales Stylesheet -->
   <link rel="stylesheet" href="css/style.css" />
@@ -12,8 +12,8 @@
 
   <!-- Header / Kopfbereich -->
   <header class="site-header">
-    <h1>Klimawandel und seine Folgen</h1>
-    <p class="subtitle">Hautkrebs</p>
+    <h1>Klimawandel als Risikofaktor für die Zunahme von Hautkrebsfällen</h1>
+    <!-- <p class="subtitle">Hautkrebs</p> -->
   </header>
 
   <!-- Navigation -->
@@ -122,12 +122,40 @@ der Prof. Jan-Christoph Simon, Direktor der Klinik und Poliklinik für Dermatolo
       </p>
     </section>
 
+      <section>
+      <h2>Sonne</h2>
+      <p>
+        auch hier gibt es Sonne
+      </p>
+    </section>
+
+      <section>
+      <h2>Sonne</h2>
+      <p>
+        auch hier gibt es Sonne
+      </p>
+    </section>
+
+      <section>
+      <h2>Sonne</h2>
+      <p>
+        auch hier gibt es Sonne
+      </p>
+    </section>
+
+      <section>
+      <h2>Sonne</h2>
+      <p>
+        auch hier gibt es Sonne
+      </p>
+    </section>
+
 
   </main>
 
   <!-- Footer / Fußbereich -->
   <footer class="site-footer">
-    <p>&copy; 2026 Schulprojekt</p>
+    <p>&copy; 2026 Projektarbeit von Annalena Dey - Gymnasium an der Hamburger Straße</p>
   </footer>
 
   <!-- Optionales JavaScript -->
